// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreHistory history renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScoreHistory
    history={
        Array [
            Object {
              "computer": 2,
              "outcome": "loss",
              "player": 1,
            },
            Object {
              "computer": 2,
              "outcome": "win",
              "player": 3,
            },
            Object {
              "computer": 2,
              "outcome": "draw",
              "player": 2,
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <table
        className="gameHistory"
>
        <tr>
                <td>
                        Rock
                </td>
                <td>
                        Lose
                </td>
                <td>
                        Paper
                </td>
        </tr>
        <tr>
                <td>
                        Scissors
                </td>
                <td>
                        Win
                </td>
                <td>
                        Paper
                </td>
        </tr>
        <tr>
                <td>
                        Paper
                </td>
                <td>
                        Draw
                </td>
                <td>
                        Paper
                </td>
        </tr>
</table>,
      "className": "ScoreHistory",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <tr>
            <td>
                        Rock
            </td>
            <td>
                        Lose
            </td>
            <td>
                        Paper
            </td>
</tr>,
          <tr>
            <td>
                        Scissors
            </td>
            <td>
                        Win
            </td>
            <td>
                        Paper
            </td>
</tr>,
          <tr>
            <td>
                        Paper
            </td>
            <td>
                        Draw
            </td>
            <td>
                        Paper
            </td>
</tr>,
        ],
        "className": "gameHistory",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <td>
                Rock
</td>,
              <td>
                Lose
</td>,
              <td>
                Paper
</td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Rock",
              },
              "ref": null,
              "rendered": "Rock",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Lose",
              },
              "ref": null,
              "rendered": "Lose",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Paper",
              },
              "ref": null,
              "rendered": "Paper",
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <td>
                Scissors
</td>,
              <td>
                Win
</td>,
              <td>
                Paper
</td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Scissors",
              },
              "ref": null,
              "rendered": "Scissors",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Win",
              },
              "ref": null,
              "rendered": "Win",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Paper",
              },
              "ref": null,
              "rendered": "Paper",
              "type": "td",
            },
          ],
          "type": "tr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <td>
                Paper
</td>,
              <td>
                Draw
</td>,
              <td>
                Paper
</td>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Paper",
              },
              "ref": null,
              "rendered": "Paper",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Draw",
              },
              "ref": null,
              "rendered": "Draw",
              "type": "td",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Paper",
              },
              "ref": null,
              "rendered": "Paper",
              "type": "td",
            },
          ],
          "type": "tr",
        },
      ],
      "type": "table",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <table
          className="gameHistory"
>
          <tr>
                    <td>
                              Rock
                    </td>
                    <td>
                              Lose
                    </td>
                    <td>
                              Paper
                    </td>
          </tr>
          <tr>
                    <td>
                              Scissors
                    </td>
                    <td>
                              Win
                    </td>
                    <td>
                              Paper
                    </td>
          </tr>
          <tr>
                    <td>
                              Paper
                    </td>
                    <td>
                              Draw
                    </td>
                    <td>
                              Paper
                    </td>
          </tr>
</table>,
        "className": "ScoreHistory",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <tr>
              <td>
                            Rock
              </td>
              <td>
                            Lose
              </td>
              <td>
                            Paper
              </td>
</tr>,
            <tr>
              <td>
                            Scissors
              </td>
              <td>
                            Win
              </td>
              <td>
                            Paper
              </td>
</tr>,
            <tr>
              <td>
                            Paper
              </td>
              <td>
                            Draw
              </td>
              <td>
                            Paper
              </td>
</tr>,
          ],
          "className": "gameHistory",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <td>
                  Rock
</td>,
                <td>
                  Lose
</td>,
                <td>
                  Paper
</td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Rock",
                },
                "ref": null,
                "rendered": "Rock",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Lose",
                },
                "ref": null,
                "rendered": "Lose",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Paper",
                },
                "ref": null,
                "rendered": "Paper",
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <td>
                  Scissors
</td>,
                <td>
                  Win
</td>,
                <td>
                  Paper
</td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Scissors",
                },
                "ref": null,
                "rendered": "Scissors",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Win",
                },
                "ref": null,
                "rendered": "Win",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Paper",
                },
                "ref": null,
                "rendered": "Paper",
                "type": "td",
              },
            ],
            "type": "tr",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <td>
                  Paper
</td>,
                <td>
                  Draw
</td>,
                <td>
                  Paper
</td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Paper",
                },
                "ref": null,
                "rendered": "Paper",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Draw",
                },
                "ref": null,
                "rendered": "Draw",
                "type": "td",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Paper",
                },
                "ref": null,
                "rendered": "Paper",
                "type": "td",
              },
            ],
            "type": "tr",
          },
        ],
        "type": "table",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`ScoreHistory no history renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScoreHistory
    history={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <table
        className="gameHistory"
>
        
</table>,
      "className": "ScoreHistory",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "gameHistory",
      },
      "ref": null,
      "rendered": Array [],
      "type": "table",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <table
          className="gameHistory"
>
          
</table>,
        "className": "ScoreHistory",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
          "className": "gameHistory",
        },
        "ref": null,
        "rendered": Array [],
        "type": "table",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
